apps/site/assets/css/export-headerfooter.scss
// slight rewrite from core.scss.
// we overwrite .no-js with .js class on mbta.com
// but outside mbta.com we can just add .js class
.hidden-no-js {
  display: none;
}

.js {
  .hidden-no-js {
    display: initial;
  }

  .hidden-js {
    display: none;
  }
}

@import "functions";
@import "variables";
@import "mixins";
@import "node_modules/bootstrap/scss/variables";
@import "node_modules/bootstrap/scss/mixins";
@import "vendor/font-awesome-4.6.3/scss/mixins";
@import "vendor/font-awesome-4.6.3/scss/variables";
@import "typography";
@import "layout";
@import "vendor/font-awesome-4.6.3/scss/font-awesome";
@import "icons";
@import "buttons";
@import "accordion-ui"; // involved in mobile nav styles
@import "header"; // some nav styles still here
@import "global-navigation"; // other nav styles

